--- a/NJWeb/nbproject/project.properties
+++ b/NJWeb/nbproject/project.properties
@@ -31,10 +31,13 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.1.jar=../nj-connector/libs/primefaces/commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.4.jar=../nj-connector/libs/primefaces/commons-io-2.4.jar
 file.reference.core-3.2.0.jar=../nj-connector/libs/core-3.2.0.jar
 file.reference.core-javase-3.2.0.jar=../nj-connector/libs/core-javase-3.2.0.jar
 file.reference.log4j-1.2.17.jar=../nj-connector/libs/log4j-1.2.17.jar
 file.reference.nj-connector.jar=../nj-connector/libs/nj-connector.jar
+file.reference.primefaces-6.0.jar=../nj-connector/libs/primefaces/primefaces-6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,8 +47,10 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/FastInfoset-1.2.12.jar:${j2ee.se
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}:\
     ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.primefaces-6.0.jar}:\
     ${file.reference.nj-connector.jar}:\
     ${file.reference.core-3.2.0.jar}:\
     ${file.reference.core-javase-3.2.0.jar}
