--- a/NJudge/nbproject/project.properties
+++ b/NJudge/nbproject/project.properties
@@ -38,6 +38,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.log4j-1.2.17.jar=../nj-connector/libs/log4j-1.2.17.jar
+file.reference.nj-connector.jar=../nj-connector/libs/nj-connector.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +48,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/FastInfoset-1.2.12.jar:${j2ee.se
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.nj-connector.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
