--- a/NJWeb/nbproject/project.properties
+++ b/NJWeb/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.atmosphere-runtime-2.4.3.jar=../nj-connector/libs/primefaces/atmosphere-runtime-2.4.3.jar
 file.reference.commons-fileupload-1.3.1.jar=../nj-connector/libs/primefaces/commons-fileupload-1.3.1.jar
 file.reference.commons-io-2.4.jar=../nj-connector/libs/primefaces/commons-io-2.4.jar
 file.reference.core-3.2.0.jar=../nj-connector/libs/core-3.2.0.jar
@@ -53,7 +54,8 @@ javac.classpath=\
     ${file.reference.primefaces-6.0.jar}:\
     ${file.reference.nj-connector.jar}:\
     ${file.reference.core-3.2.0.jar}:\
-    ${file.reference.core-javase-3.2.0.jar}
+    ${file.reference.core-javase-3.2.0.jar}:\
+    ${file.reference.atmosphere-runtime-2.4.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
