--- a/NJWeb/web/WEB-INF/web.xml
+++ b/NJWeb/web/WEB-INF/web.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     
-    <display-name>NagoJudge</display-name>  
+    <display-name>NagoJudge</display-name>
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
+    </context-param>
+    <context-param>
+        <param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
+        <param-value>true</param-value>
     </context-param>
     <context-param>
         <param-name>org.apache.myfaces.SERIALIZE_STATE_IN_SESSION</param-name>
@@ -16,7 +20,7 @@
     </context-param>
     <context-param>
         <param-name>primefaces.UPLOADER</param-name>
-        <param-value>auto|native|commons</param-value>
+        <param-value>commons</param-value>
     </context-param>
     <context-param>
         <param-name>primefaces.THEME</param-name>
@@ -30,6 +34,7 @@
         <param-name>auth-email-config</param-name>
         <param-value>WEB-INF/auth-email.properties</param-value>
     </context-param>
+    
     <listener>
         <description>InitializeAppListener</description>
         <listener-class>edu.nagojudge.web.listeners.InitializeAppListener</listener-class>
@@ -42,6 +47,16 @@
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
     </filter-mapping>
+    
+    <servlet>
+        <servlet-name>Push Servlet</servlet-name>
+        <servlet-class>org.primefaces.push.PushServlet</servlet-class>
+        <async-supported>true</async-supported>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Push Servlet</servlet-name>
+        <url-pattern>/primepush/*</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -51,6 +66,7 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/to/*</url-pattern>
     </servlet-mapping>
+    
     <session-config>
         <session-timeout>
             30
