- Modulo Configuracion de parametros y seguridad. (60%)

--- a/NJWeb/web/WEB-INF/auth-email.properties
+++ b/NJWeb/web/WEB-INF/auth-email.properties
@@ -1,9 +1,13 @@
-mail.nagojudge.usuario=*********
-mail.nagojudge.password=******
+mail.nagojudge.user=***************
+mail.nagojudge.password=**************
 mail.nagojudge.debug=true
-mail.nagojudge.smtp.host=smtp.gmail.com
 mail.nagojudge.smtp.from=NagoJudge
-mail.nagojudge.smtp.auth=true
-mail.nagojudge.smtp.port=465
-mail.smtp.socketFactory.port=465
+
+mail.smtp.host=smtp.gmail.com
+mail.smtp.host.2=imap.gmail.com
+mail.smtp.starttls.required=true
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.smtp.socketFactory.fallback=false
+mail.smtp.auth=true
+mail.smtp.port=465
+mail.smtp.socketFactory.port=465
