--- a/NJWeb/nbproject/project.properties
+++ b/NJWeb/nbproject/project.properties
@@ -36,9 +36,12 @@ file.reference.commons-fileupload-1.3.1.jar=../nj-connector/libs/primefaces/comm
 file.reference.commons-io-2.4.jar=../nj-connector/libs/primefaces/commons-io-2.4.jar
 file.reference.core-3.2.0.jar=../nj-connector/libs/core-3.2.0.jar
 file.reference.core-javase-3.2.0.jar=../nj-connector/libs/core-javase-3.2.0.jar
+file.reference.javax.mail-1.5.6.jar=../nj-connector/libs/javax.mail-1.5.6.jar
 file.reference.log4j-1.2.17.jar=../nj-connector/libs/log4j-1.2.17.jar
 file.reference.nj-connector.jar=../nj-connector/libs/nj-connector.jar
 file.reference.primefaces-6.0.jar=../nj-connector/libs/primefaces/primefaces-6.0.jar
+file.reference.primefaces-extensions-6.0.0.jar=../nj-connector/libs/primefaces/primefaces-extensions-6.0.0.jar
+file.reference.resources-ckeditor-6.0.0.jar=../nj-connector/libs/primefaces/resources-ckeditor-6.0.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -52,10 +55,13 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.primefaces-6.0.jar}:\
+    ${file.reference.atmosphere-runtime-2.4.3.jar}:\
+    ${file.reference.primefaces-extensions-6.0.0.jar}:\
+    ${file.reference.resources-ckeditor-6.0.0.jar}:\
     ${file.reference.nj-connector.jar}:\
     ${file.reference.core-3.2.0.jar}:\
     ${file.reference.core-javase-3.2.0.jar}:\
-    ${file.reference.atmosphere-runtime-2.4.3.jar}
+    ${file.reference.javax.mail-1.5.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
