--- a/NJWeb/web/WEB-INF/web.xml
+++ b/NJWeb/web/WEB-INF/web.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-    
     <display-name>NagoJudge</display-name>
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
@@ -34,7 +33,10 @@
         <param-name>auth-email-config</param-name>
         <param-value>WEB-INF/auth-email.properties</param-value>
     </context-param>
-    
+    <context-param>
+        <param-name>templates-folder</param-name>
+        <param-value>WEB-INF/templates</param-value>
+    </context-param>
     <listener>
         <description>InitializeAppListener</description>
         <listener-class>edu.nagojudge.web.listeners.InitializeAppListener</listener-class>
@@ -47,7 +49,6 @@
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
     </filter-mapping>
-    
     <servlet>
         <servlet-name>Push Servlet</servlet-name>
         <servlet-class>org.primefaces.push.PushServlet</servlet-class>
@@ -66,7 +67,6 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/to/*</url-pattern>
     </servlet-mapping>
-    
     <session-config>
         <session-timeout>
             30
@@ -75,4 +75,9 @@
     <welcome-file-list>
         <welcome-file>to/index.xhtml</welcome-file>
     </welcome-file-list>
+    <ejb-local-ref>
+        <ejb-ref-name>SecurityFacadeDAO</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <ejb-link>#SecurityFacadeDAO</ejb-link>
+    </ejb-local-ref>
 </web-app>
