--- a/NJLive/web/WEB-INF/web.xml
+++ b/NJLive/web/WEB-INF/web.xml
@@ -30,7 +30,8 @@
         <param-value>WEB-INF/log4j.properties</param-value>
     </context-param>
     <listener>
-        <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
+        <description>InitializeAppListener</description>
+        <listener-class>edu.nagojudge.live.web.listeners.InitializeAppListener</listener-class>
     </listener>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
@@ -39,7 +40,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
+        <url-pattern>/now/*</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
@@ -47,6 +48,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/index.xhtml</welcome-file>
+        <welcome-file>now/signin.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
