--- a/NJLive/nbproject/project.properties
+++ b/NJLive/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.log4j-1.2.17.jar=../nj-connector/libs/log4j-1.2.17.jar
+file.reference.nj-connector.jar=../nj-connector/libs/nj-connector.jar
 file.reference.primefaces-6.0.jar=../nj-connector/libs/primefaces/primefaces-6.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,7 +42,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.primefaces-6.0.jar}
+    ${file.reference.primefaces-6.0.jar}:\
+    ${file.reference.nj-connector.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
