--- a/NJWeb/nbproject/project.properties
+++ b/NJWeb/nbproject/project.properties
@@ -76,7 +76,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -85,7 +85,7 @@ javadoc.preview=true
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
@@ -103,6 +103,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=NJWeb.war
+war.name=go.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
