--- a/NJudge/nbproject/project.properties
+++ b/NJudge/nbproject/project.properties
@@ -64,7 +64,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -73,7 +73,7 @@ javadoc.preview=true
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
@@ -92,6 +92,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=NJudge.war
+war.name=ask.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
