--- a/NJLive/nbproject/project.properties
+++ b/NJLive/nbproject/project.properties
@@ -4,7 +4,14 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -30,6 +37,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.1.jar=../nj-connector/libs/primefaces/commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.4.jar=../nj-connector/libs/primefaces/commons-io-2.4.jar
+file.reference.jackson-core-asl-1.9.13.jar=../nj-connector/libs/jackson-core-asl-1.9.13.jar
+file.reference.jackson-mapper-asl-1.9.13.jar=../nj-connector/libs/jackson-mapper-asl-1.9.13.jar
 file.reference.log4j-1.2.17.jar=../nj-connector/libs/log4j-1.2.17.jar
 file.reference.nj-connector.jar=../nj-connector/libs/nj-connector.jar
 file.reference.primefaces-6.0.jar=../nj-connector/libs/primefaces/primefaces-6.0.jar
@@ -46,7 +57,11 @@ javac.classpath=\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.primefaces-6.0.jar}:\
     ${file.reference.primefaces-extensions-6.0.0.jar}:\
-    ${file.reference.nj-connector.jar}
+    ${file.reference.nj-connector.jar}:\
+    ${file.reference.jackson-mapper-asl-1.9.13.jar}:\
+    ${file.reference.jackson-core-asl-1.9.13.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -61,7 +76,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -70,7 +85,7 @@ javadoc.preview=true
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
@@ -88,6 +103,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=NJLive.war
+war.name=live.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
