--- a/nj-connector/nbproject/project.properties
+++ b/nj-connector/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.jar=${dist.dir}/nj-connector.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.core-3.2.0.jar=libs/core-3.2.0.jar
+file.reference.core-javase-3.2.0.jar=libs/core-javase-3.2.0.jar
 file.reference.tomcat-jdbc.jar=libs/tomcat-jdbc.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
+    ${file.reference.core-3.2.0.jar}:\
+    ${file.reference.core-javase-3.2.0.jar}:\
     ${file.reference.tomcat-jdbc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
