--- a/NJLive/web/WEB-INF/web.xml
+++ b/NJLive/web/WEB-INF/web.xml
@@ -19,7 +19,7 @@
     </context-param>
     <context-param>
         <param-name>primefaces.UPLOADER</param-name>
-        <param-value>commons|auto</param-value>
+        <param-value>commons</param-value>
     </context-param>
     <context-param>
         <param-name>primefaces.THEME</param-name>
@@ -31,12 +31,11 @@
     </context-param>
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
-        <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+        <filter-class> org.primefaces.webapp.filter.FileUploadFilter </filter-class>
     </filter>
     <filter-mapping>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
-        <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
     <listener>
         <description>InitializeAppListener</description>
