--- a/NJWeb/web/WEB-INF/web.xml
+++ b/NJWeb/web/WEB-INF/web.xml
@@ -29,6 +29,14 @@
         <param-name>log4j-config</param-name>
         <param-value>WEB-INF/log4j.properties</param-value>
     </context-param>
+    <filter>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-class> org.primefaces.webapp.filter.FileUploadFilter </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
     <context-param>
         <param-name>auth-email-config</param-name>
         <param-value>WEB-INF/auth-email.properties</param-value>
@@ -41,10 +49,6 @@
         <description>InitializeAppListener</description>
         <listener-class>edu.nagojudge.web.listeners.InitializeAppListener</listener-class>
     </listener>
-    <filter>
-        <filter-name>PrimeFaces FileUpload Filter</filter-name>
-        <filter-class> org.primefaces.webapp.filter.FileUploadFilter </filter-class>
-    </filter>
     <servlet>
         <servlet-name>Push Servlet</servlet-name>
         <servlet-class>org.primefaces.push.PushServlet</servlet-class>
