--- a/NJWeb/web/WEB-INF/log4j.properties
+++ b/NJWeb/web/WEB-INF/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{
 
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=../logs/nj/web-live.log
+log4j.appender.file.File=../logs/nj/web-board.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
