--- a/NJLive/web/WEB-INF/web.xml
+++ b/NJLive/web/WEB-INF/web.xml
@@ -33,6 +33,10 @@
         <param-name>log4j-config</param-name>
         <param-value>WEB-INF/log4j.properties</param-value>
     </context-param>
+    <context-param>
+        <param-name>init-config</param-name>
+        <param-value>WEB-INF/init-config.properties</param-value>
+    </context-param>
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <filter-class> org.primefaces.webapp.filter.FileUploadFilter </filter-class>
