- Ajustes Juez Virtual (70%) - Primer prueba en conjunto efectuada.

--- a/NJLive/web/WEB-INF/init-config.properties
+++ b/NJLive/web/WEB-INF/init-config.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-judge.nagojudge.url = http://localhost:8484/ask
+judge.nagojudge.url = http://localhost:8484/api
 
 judge.nagojudge.path.submit.team = submit/verdict/team/{idTeam}/{idSubmit}
 
