--- a/NJudge/web/WEB-INF/web.xml
+++ b/NJudge/web/WEB-INF/web.xml
@@ -14,6 +14,14 @@
             30
         </session-timeout>
     </session-config>
+ <!--   <servlet>
+        <servlet-name>javax.ws.rs.core.Application</servlet-name>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>javax.ws.rs.core.Application</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>-->
     <error-page>
         <error-code>404</error-code>
         <location>/error.html</location>
