- Ajustes Juez Virtual (80%) - Primer prueba en conjunto efectuada.

--- a/NJLive/web/WEB-INF/init-config.properties
+++ b/NJLive/web/WEB-INF/init-config.properties
@@ -1,11 +1,26 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
+# App Configuration NagoJudge
 
 judge.nagojudge.url = http://localhost:8484/api
 
-judge.nagojudge.path.submit.team = submit/verdict/team/{idTeam}/{idSubmit}
+judge.nagojudge.i18 = es
 
-judge.nagojudge.path.submit.user = submit/verdict/team/{idTeam}/{idSubmit}
+# Services NagoJudge
 
-judge.nagojudge.penality.time = 15
+judge.path.submit.team.send = submit/verdict/team/{idChallenge}/{idTeam}
+
+judge.path.submit.user.send = submit/verdict/user/{email}
+
+judge.path.submit.team.search = submit/search/team/{idChallenge}/{idTeam}
+
+judge.path.submit.user.view = submit/code/{idSubmit}
+
+judge.path.submit.team.download = submit/code/download/{idChallenge}/{idTeam}/{idProblem}
+
+judge.path.problem.view = problem/external/{idProblem}
+
+
+# Rules NagoJuge
+
+judge.penality.time = 15
+
+judge.score.frozen.before.time = 60
