--- a/NJudge/web/WEB-INF/log4j.properties
+++ b/NJudge/web/WEB-INF/log4j.properties
@@ -1,4 +1,7 @@
 log4j.rootLogger=DEBUG, console, file
+log4j.rootLogger=FINE, console, file
+log4j.rootLogger=TRACE, console, file
+
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
