--- a/NJWeb/nbproject/project.properties
+++ b/NJWeb/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=tools/frameworks/codemirror/addon/hint
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -21,7 +21,7 @@ conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
-display.browser=true
+display.browser=false
 # Files to be excluded from distribution war
 dist.archive.excludes=
 dist.dir=dist
@@ -51,14 +51,14 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/FastInfoset-1.2.12.jar:${j2ee.se
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.commons-fileupload-1.3.1.jar}:\
-    ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.primefaces-6.0.jar}:\
-    ${file.reference.atmosphere-runtime-2.4.3.jar}:\
     ${file.reference.primefaces-extensions-6.0.0.jar}:\
     ${file.reference.resources-ckeditor-6.0.0.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.atmosphere-runtime-2.4.3.jar}:\
     ${file.reference.nj-connector.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.core-3.2.0.jar}:\
     ${file.reference.core-javase-3.2.0.jar}:\
     ${file.reference.javax.mail-1.5.6.jar}
