--- a/NJWeb/web/WEB-INF/web.xml
+++ b/NJWeb/web/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-    <display-name>NagoJudge</display-name>
+    <display-name>NagoJudge</display-name>    
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
@@ -33,9 +33,17 @@
         <param-name>log4j-config</param-name>
         <param-value>WEB-INF/log4j.properties</param-value>
     </context-param>
+    <context-param>
+        <param-name>init-config</param-name>
+        <param-value>WEB-INF/init-config.properties</param-value>
+    </context-param>
+    <context-param>
+        <param-name>timezone</param-name>
+        <param-value>America/Bogota</param-value>
+    </context-param> 
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
-        <filter-class> org.primefaces.webapp.filter.FileUploadFilter </filter-class>
+        <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
